# prodigy

./: .gitignore  AGENTS.md  README.md  depos.project.cmake  pinger.h  prodigy_acme_public_tls_goal_prompt.md  prodigy_resumption_keyring_corrective_goal_prompt.md  prodigy_routable_address_dns_goal_prompt.md
assets/: prodigy-logo.avif
depofiles/: SG14.DepoFile  aegis.DepoFile  bitsery.DepoFile  cares.DepoFile  cppsort.DepoFile  flatbuffers.DepoFile  graphblas.DepoFile  gxhash.DepoFile  h3.DepoFile  hse.DepoFile  itoa.DepoFile  libbpf.DepoFile  libcap.DepoFile  libcurl.DepoFile  libelf.DepoFile  libseccomp.DepoFile  libssh2.DepoFile  liburing.DepoFile  lz4.DepoFile  mimalloc.DepoFile  nghttp2.DepoFile  openssl.DepoFile  picoquic.DepoFile  picotls.DepoFile  simdjson.DepoFile  snappy.DepoFile  static_type_info.DepoFile  tidesdb.DepoFile  zlib.DepoFile  zstd.DepoFile
ebpf/: interface.h
ebpf/common/: debug.h  macros.h  structs.h
ebpf/kernel/: aes.h  aes.tables.h  containersubnet.h  debug.h  includes.h  maps.h  services.h
enums/: datacenter.h
macros/: datacenter.h  quic.h
networking/: bgp.h
prodigy/: PRODIGY_TLS_API_CREDENTIALS_PHASED_EXECUTION_PLAN.md  acme.certbot.h  biphasal.key.h  bootstrap.config.h  bootstrap.peers.h  brain.reachability.h  build.identity.h  bundle.artifact.h  child.process.signal.h  cluster.bootstrap.h  cluster.machine.helpers.h  command.capture.h  container.contract.h  containerstore.h  debug.h  declared.network.policy.h  dns.provider.h  dns.providers.h  future_work.md  host.async.task.h  host.control.network.h  host.delay.operation.h  host.http.admission.h  host.http.operation.h  inbound.latency.exporter.h  ingress.validation.h  json.h  machine.hardware.h  machine.hardware.types.h  memfd.blob.h  metro.networkmonitor.h  netdev.detect.h  neuron.hub.h  overload.metrics.h  peer.address.helpers.h  persistent.state.h  prodigy.cpp  prodigy.h  provider.machine.offer.h  quic.cid.generator.h  (+12 more)
prodigy/acme/: acme-cleanup-dns-01  acme-import-lineage  acme-present-dns-01
prodigy/brain/: base.h  brain.h  containerviews.h  deployments.h  dns.operations.h  elastic.address.operations.h  machine.h  machine.lifecycle.h  mesh.h  mesh.node.h  metrics.h  rack.h  routable.subnet.control.h  timing.knobs.h
prodigy/dev/: CMakeLists.txt  embed_file_bytes.cmake  fake_ipv4_boundary_nat.ebpf.c  tunnel_to_nic.ebpf.c  write_prodigy_bundle_sha256_file.cmake
prodigy/discombobulator/: Cargo.toml
prodigy/discombobulator/src/: build.rs  build_portable.rs  cli.rs  lib.rs  main.rs  plan.rs  registry.rs
prodigy/discombobulator/tests/: build_smoke.rs  bundle.rs  parser.rs  registry.rs  tooling_http_contract.rs
prodigy/dns/: DiscombobuFile.in  control.bootstrap.h  control.client.h  control.leases.h  prodigy-dns-resolver.control.deployment.plan.v1.json.in  prodigy-dns-resolver.deployment.plan.v1.json.in  provider.http.h  resolver.config.h  resolver.cpp  resolver.h  resolver.service.h
prodigy/docs/: README.md  build.md  discombobulator.md  dns-providers.md  gcp.md  iaas-adapters.md  network-packet-budgets.md  runtime.md  security.md  vultr.md
prodigy/enums/: datacenter.h
prodigy/iaas/: bootstrap.ssh.h  iaas.h
prodigy/logging/: README.md  logging.h  spawn.h  types.h
prodigy/mothership/: mothership.addmachines.progress.h  mothership.cluster.create.h  mothership.cluster.reconcile.h  mothership.cluster.registry.h  (+22 more)
prodigy/sdk/: AEGIS.md  CMakeLists.txt  CONTRACT.md  INTERFACES.md  NATIVE_ROADMAP.md  PUBLISHING.md  README.md  VERSIONING.md  WIRE.md  compatibility_matrix.sh  versioning.json
prodigy/sdk/c/: README.md  prodigy_io_uring_reactor.c  prodigy_io_uring_reactor.h  prodigy_neuron_hub.c  prodigy_neuron_hub.h  prodigy_neuron_hub_selftest.c
prodigy/sdk/c/examples/: README.md  aegis_roundtrip.c  mesh_pingpong.advertiser.deployment.plan.v1.json  mesh_pingpong.c  mesh_pingpong.subscriber.deployment.plan.v1.json
prodigy/sdk/cmake/: ProdigySDKCConfig.cmake.in  ProdigySDKConfig.cmake.in
prodigy/sdk/cpp/: README.md  aegis_session.h  io_uring_reactor.h  neuron_hub.h
prodigy/sdk/cpp/examples/: aegis_roundtrip.cpp  io_uring_mesh_pingpong.advertiser.deployment.plan.v1.json  io_uring_mesh_pingpong.cpp  io_uring_mesh_pingpong.subscriber.deployment.plan.v1.json  opinionated_aegis_roundtrip.cpp
prodigy/sdk/cpp/opinionated/: aegis_stream.h  dns_client.h  dns_wire.h  pairings.h
prodigy/sdk/cpp/tests/: assert_opinionated_dns_contract.cmake  opinionated_aegis_smoke.cpp  opinionated_dns_client.cpp
prodigy/sdk/fixtures/: README.md  generate.ts  manifest.json
prodigy/sdk/go/: README.md  aegis.go  aegis_test.go  go.mod  go.sum  neuron_hub.go  neuron_hub_test.go  reactor.go  reactor_test.go
prodigy/sdk/go/examples/: mesh_pingpong.advertiser.deployment.plan.v1.json  mesh_pingpong.subscriber.deployment.plan.v1.json
prodigy/sdk/go/examples/aegis_roundtrip/: main.go
prodigy/sdk/go/examples/mesh_pingpong/: main.go
prodigy/sdk/python/: README.md  neuron_hub.py  prodigy_sdk.py  pyproject.toml
prodigy/sdk/python/examples/: aegis_roundtrip.py  async_mesh_pingpong.advertiser.deployment.plan.v1.json  async_mesh_pingpong.py  async_mesh_pingpong.subscriber.deployment.plan.v1.json
prodigy/sdk/python/tests/: test_aegis.py  test_neuron_hub.py
prodigy/sdk/rust/: Cargo.toml  README.md  neuron_hub.rs
prodigy/sdk/rust/examples/: aegis_roundtrip.rs  mesh_pingpong.advertiser.deployment.plan.v1.json  mesh_pingpong.rs  mesh_pingpong.subscriber.deployment.plan.v1.json  opinionated_aegis_roundtrip.rs
prodigy/sdk/rust/src/: aegis.rs  lib.rs  opinionated.rs  tokio_support.rs
prodigy/sdk/tools/: prepare_release_assets.sh
prodigy/sdk/typescript/: README.md  index.ts  neuron_hub.ts  package.json  tsconfig.json
prodigy/sdk/typescript/examples/: aegis_roundtrip.ts  mesh_pingpong.advertiser.deployment.plan.v1.json  mesh_pingpong.subscriber.deployment.plan.v1.json  mesh_pingpong.ts
prodigy/sdk/typescript/tests/: self_test.ts
services/: aes.h  prodigy.h
switchboard/: container.tcp.flow.route.h  maglevhashv2.h  overlay.route.h  owned.routable.prefix.h  switchboard.h  whitehole.route.h
(+263 files in other folders)
